<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/masthead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/welcome"
            style="@style/MagentaWhite"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search"
            style="@style/MagentaWhite" />


        <Button
            android:id="@+id/button_discover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Discover"
            style="@style/MagentaWhite" />


        <Button
            android:id="@+id/button_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/labelPopularity"
            style="@style/MagentaWhite" />

        <Button
            android:id="@+id/button_topRated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/labelTopRated"
            style="@style/MagentaWhite" />


        <Button
            android:id="@+id/button_nowplaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/labelNowPlaying"
            style="@style/MagentaWhite" />

        <Button
            android:id="@+id/button_upcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/labelUpcoming"
            style="@style/MagentaWhite" />

        <Button
            android:id="@+id/button_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/labelFav"
            style="@style/MagentaWhite" />


    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="invisible" />
</LinearLayout>