<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300sp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:contentDescription="@string/MoviePoster" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    style="@style/MagentaWhite"
                    android:layout_width="150sp"
                    android:layout_height="50sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:lines="4"
                    android:maxLines="4"
                    android:padding="1sp"
                    android:singleLine="false"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/vote_average"
                    style="@style/MagentaWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="1sp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/releaseDate"
                    style="@style/MagentaWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:lines="4"
                    android:maxLines="4"
                    android:padding="1sp"
                    android:singleLine="false"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/favButton"
                    style="@style/MagentaWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/SetFavourite"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/magenta"
                android:text="Synopsis"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/synopsis"
                style="@style/MagentaWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:maxLines="100"
                android:padding="1sp"
                android:scrollbars="vertical"
                android:singleLine="false"
                android:textSize="20sp"
                android:verticalScrollbarPosition="right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/magenta"
                android:text="@string/ViewVideos"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ListView
                android:id="@+id/listView2"
                style="@style/MagentaWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/magenta"
                android:text="@string/ReadReviews"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ListView
                android:id="@+id/listView1"
                style="@style/MagentaWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <Button
                android:id="@+id/mReview"
                style="@style/MagentaWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ReadReviews" />

            <Button
                android:id="@+id/mVideos"
                style="@style/MagentaWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ViewVideos" />


            <Button
                android:id="@+id/similarButton"
                style="@style/MagentaWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Similar" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>